# MarketAlarm

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/core/: models.py  monitor.py
app/db/: repository.py
app/interfaces/: routes.py
app/use_cases/: auth.py
src/: composer.py  config.py  error_handler.py  main.py
src/application/use_cases/: auth.py  create_alarm.py  create_user.py  get_alarm_by_id.py  get_alarms.py  interfaces.py  login.py
src/controllers/: create_alarm_controller.py  create_user_controller.py  get_alarm_by_id_controller.py  get_alarms_controller.py  interfaces.py  login_controller.py
src/domain/: alarm.py  bcrypt_password.py  email.py  models.py  monitor.py  token_generator.py  user.py
src/infra/database/: alarm_dao.py  alarm_repository.py  connection.py  database.py  models.py  user_repository.py
src/infra/db/: repository.py
src/infra/web/: flask_adapter.py  routes.py  server.py
src/use_cases/: create_alarm.py  create_user.py  get_alarm_by_id.py  get_alarms.py  interfaces.py  login.py
temp/: conftest.py
tests/: conftest.py  test_create_alarm.py  test_create_user.py  test_get_alarm_by_id.py  test_get_alarms.py  test_main.py  test_routes.py
