[tool.poetry]
name = "marketalarm"
version = "0.1.0"
description = ""
authors = ["DanielSTS <daniel.junior.ifpb@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
bcrypt = "^4.1.3"
sqlalchemy = "^2.0.30"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"